# embc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  requirements.txt  setup.py  version.cmake
doc/: Doxyfile.in  developer.md  footer.html
include/: embc.h
include/embc/: argchk.h  assert.h  bbuf.h  cdef.h  cli.h  cmacro_inc.h  crc.h  cstr.h  dbc.h  ec.h  event_manager.h  fsm.h  inttypes.h  lfsr.h  lib.h  log.h  pattern_32a.h  platform.h  pool.h  time.h  version.h
include/embc/collections/: bbuf.h  hashmap.h  intmap.h  list.h  strmap.h
include/embc/host/: comm.h  uart.h  uart_data_link.h  uart_thread.h
include/embc/host/win/: config.h
include/embc/memory/: block.h  buffer.h  object_pool.h  pool.h
include/embc/os/: mutex.h
include/embc/platform/: arm.h  stdlib.h
include/embc/stream/: async.h  async_sink.h  async_source.h  data_link.h  framer.h  framer_rx.h  framer_util.h  msg_ring_buffer.h  port.h  port0.h  pubsub.h  pubsub_port.h  ring_buffer_u64.h  ring_buffer_u8.h  stack.h  timesync.h  transport.h  waveform_port.h
port/include/embc/: config.h
py/embc/: __init__.py  ec.py  lib.py  pattern_32a.py
py/embc/collections/: __init__.py  list.py
py/embc/collections/test/: test_list.py
py/embc/memory/: __init__.py  buffer.py
py/embc/memory/test/: test_buffer.py
py/embc/stream/: __init__.py  framer.py
py/embc/stream/test/: test_framer.py
py/embc/test/: test_pattern_32a.py
pyembc/: __init__.py  __main__.py  c_crc.pxd  crc.pyx  module.pxi  time.py  version.py
pyembc/entry_points/: __init__.py  comm_ui.py  crc.py  framer_tester.py  uart_data_link.py
pyembc/host/: c_comm.pxd  c_uart_data_link.pxd  comm.c  comm.pyx  pubsub.py  pubsub_port.py  uart_data_link.pyx
pyembc/host/test/: test_pubsub.py
pyembc/host/ui/: __init__.py  device.py  device_widget.py  main.py  open.py  resync.py
pyembc/include/embc/: config.h
pyembc/stream/: c_framer.pxd  data_link.py  framer.c  framer.pyx  port0_server.py  ports.py  pubsub.py  pubsub_port.py  stream_tester.py  transport.py
pyembc/stream/test/: test_framer.py  test_pubsub.py  test_stream_tester.py  test_transport.py
src/: CMakeLists.txt  bbuf.c  cli.c  config.h.in  crc.c  cstr.c  ec.c  event_manager.c  fsm.c  lfsr.c  lib.c  log.c  pattern_32a.c  platform.c  pool.c  version.h.in
src/collections/: bbuf.c  hashmap.c  intmap.c  list.c  strmap.c
src/host/freertos/: os_mutex.c
src/host/win/: comm.c  os_mutex.c  platform.c  uart.c  uart_data_link.c  uart_thread.c
src/memory/: block.c  buffer.c  object_pool.c  pool.c
src/stream/: async.c  async_sink.c  async_source.c  data_link.c  framer.c  framer_rx.c  msg_ring_buffer.c  port0.c  pubsub.c  pubsub_port.c  ring_buffer_u8.c  stack.c  timesync.c  transport.c
test/: CMakeLists.txt  argchk_test.c  bbuf_test.c  cdef_static_assert_test.c  cdef_test.c  cli_test.c  crc_test.c  cstr_test.c  dbc_test.c  ec_test.c  event_manager_test.c  fsm_test.c  hal.c  hal_test_impl.h  lfsr_test.c  log_test.c  pattern_32a.c  pattern_32a_test.c  platform_test.c  pool_test.c  time_test.c
test/collections/: CMakeLists.txt  bbuf_test.c  hashmap_test.c  intmap_test.c  list_test.c  strmap_test.c
test/memory/: CMakeLists.txt  block_test.c  buffer_test.c  object_pool_test.c  pool_test.c
test/stream/: CMakeLists.txt  async_sink_test.c  async_source_test.c  async_test.c  data_link_test.c  framer_rx_test.c  framer_test.c  host.c  msg_ring_buffer_test.c  port0_test.c  pubsub_port_test.c  pubsub_test.c  ring_buffer_u64_test.c  ring_buffer_u8_test.c  stream_tester.c  transport_test.c  uart.c  uart.h
